--- a/Partida/Partida.html
+++ b/Partida/Partida.html
@@ -18,12 +18,12 @@
     #alaska-container {
       top: 2vh; /* 2% da altura do viewport */
       right: 2vw; /* 2% da largura do viewport */
-      width: 5vw; /* 30% da largura do viewport */
+      width: 30vw; /* 30% da largura do viewport */
     }
     #mackenzie-container {
       top: 2vh; /* 2% da altura do viewport */
-      right: 2vw; /* 34% da largura do viewport */
-      width: 5vw; /* 30% da largura do viewport */
+      right: 34vw; /* 34% da largura do viewport */
+      width: 30vw; /* 30% da largura do viewport */
     }
     img {
       width: 100%; /* A imagem ocupa 100% da largura do contêiner */
@@ -62,6 +62,12 @@
         // Marque o novo elemento selecionado e armazene sua posição atual
         selectedElement = element;
         selectedElement.style.border = "2px solid red"; // Adiciona uma borda vermelha ao elemento selecionado
+
+        // Armazene a posição inicial do elemento
+        initialPosition = {
+          x: parseFloat(selectedElement.style.left),
+          y: parseFloat(selectedElement.style.top)
+        };
       }
     }
 
