--- a/Partida/partida-joao.html
+++ b/Partida/partida-joao.html
@@ -33,11 +33,9 @@
 </head>
 <body>
   <div id="alaska-container" class="image-container" onclick="selectElement('alaska-container')">
-    <img src="/IMAGE/Alaska.svg" alt="Alasca">
+    <img src="/IMAGE/Mundi.svg" alt="Alasca">
   </div>
-  <div id="mackenzie-container" class="image-container" onclick="selectElement('mackenzie-container')">
-    <img src="/IMAGE/Mackenzie.svg" alt="Mackenzie">
-  </div>
+  
 
   <div id="coordinates">Posição: (0, 0)</div>
 
