--- a/Partida/partida-joao.html
+++ b/Partida/partida-joao.html
@@ -33,7 +33,7 @@
 </head>
 <body>
   <div id="mapa" class="image-container" onclick="selectElement('mapa-container')">
-    <img src="/mnt/data/image.png" alt="mapa" id="map-image">
+    <img src="/IMAGE/Mundi.svg" alt="mapa" id="map-image">
   </div>
   
   <div id="map">
