--- a/Partida/partida-joao.html
+++ b/Partida/partida-joao.html
@@ -53,7 +53,7 @@
     const canvas = document.getElementById("canvas");
     const ctx = canvas.getContext("2d");
     const img = new Image();
-    img.src = '/IMAGE/Mundi.svg';  // Substitua pelo caminho correto da imagem
+    img.src = '';  // Substitua pelo caminho correto da imagem
 
     img.onload = function() {
       canvas.width = img.width;
