--- a/Partida/partida-joao.html
+++ b/Partida/partida-joao.html
@@ -40,7 +40,7 @@
     const canvas = document.getElementById("canvas");
     const ctx = canvas.getContext("2d");
     const img = new Image();
-    img.src = '/IMAGE/mundi.svg';  // Substitua pelo caminho correto da imagem
+    img.src = '/IMAGE/Mundi.svg';  // Substitua pelo caminho correto da imagem
 
     img.onload = function() {
       canvas.width = img.width;
