--- a/Partida/partida-joao.html
+++ b/Partida/partida-joao.html
@@ -2,89 +2,70 @@
 <html lang="pt-br">
 <head>
   <meta charset="UTF-8">
-  <title>Identificação de Territórios</title>
+  <title>Mapa Mundi com Territórios</title>
   <style>
     body, html {
       margin: 0;
       padding: 0;
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
+      width: 100vw;
       height: 100vh;
-      background-color: #f0f0f0;
     }
     .image-container {
-      position: relative;
+      position: absolute;
+      height: auto;
       cursor: pointer;
     }
-    #map {
-      position: relative;
+    #mapa {
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
     }
-    #territory-name {
-      margin-top: 20px;
-      font-size: 20px;
-      font-family: Arial, sans-serif;
+    img {
+      width: 100%;
+      height: auto;
     }
-    #canvas {
-      border: 1px solid #000;
+    .territory {
+      position: absolute;
+      border: 1px solid red; /* Apenas para visualização, pode ser removido */
     }
   </style>
 </head>
 <body>
-  <div id="mapa" class="image-container" onclick="selectElement('mapa-container')">
-    <img src="/mnt/data/image.png" alt="mapa" id="map-image">
+  <div id="mapa" class="image-container">
+    <img src="/IMAGE/Mundi.svg" alt="mapa">
   </div>
-  
-  <div id="map">
-    <canvas id="canvas"></canvas>
-  </div>
-  
-  <div id="territory-name">Clique em um território para identificar</div>
-
   <script>
     const territories = [
-      { name: "Alasca", x: 70, y: 80, width: 100, height: 50 },
-      { name: "Canadá", x: 170, y: 80, width: 180, height: 80 },
-      { name: "Brasil", x: 280, y: 220, width: 100, height: 120 },
-      { name: "Estados Unidos", x: 100, y: 150, width: 150, height: 80 },
-      { name: "México", x: 130, y: 230, width: 80, height: 80 },
-      { name: "Argentina", x: 300, y: 350, width: 70, height: 100 },
-      { name: "Rússia", x: 500, y: 80, width: 250, height: 150 },
-      { name: "China", x: 600, y: 200, width: 150, height: 120 },
-      { name: "Austrália", x: 800, y: 400, width: 120, height: 80 },
-      // Adicione mais territórios conforme necessário
+      { id: "alaska", name: "Alasca", x: 10, y: 10, width: 100, height: 100 },
+      { id: "canada", name: "Canadá", x: 150, y: 20, width: 100, height: 100 },
+      { id: "usa", name: "Estados Unidos", x: 300, y: 30, width: 100, height: 100 },
+      { id: "mexico", name: "México", x: 450, y: 40, width: 100, height: 100 },
+      { id: "brazil", name: "Brasil", x: 600, y: 50, width: 100, height: 100 },
+      { id: "argentina", name: "Argentina", x: 750, y: 60, width: 100, height: 100 },
+      { id: "uk", name: "Reino Unido", x: 900, y: 70, width: 100, height: 100 },
+      { id: "france", name: "França", x: 1050, y: 80, width: 100, height: 100 },
+      { id: "germany", name: "Alemanha", x: 1200, y: 90, width: 100, height: 100 },
+      { id: "china", name: "China", x: 1350, y: 100, width: 100, height: 100 },
+      { id: "japan", name: "Japão", x: 1500, y: 110, width: 100, height: 100 },
+      { id: "australia", name: "Austrália", x: 1650, y: 120, width: 100, height: 100 },
+      // Adicione mais países conforme necessário
     ];
 
-    const canvas = document.getElementById("canvas");
-    const ctx = canvas.getContext("2d");
-    const img = new Image();
-    img.src = '/IMAGE/Mundi.svg';  // Substitua pelo caminho correto da imagem
+    territories.forEach(territory => {
+      const div = document.createElement("div");
+      div.id = territory.id;
+      div.className = "territory";
+      div.style.left = territory.x + "px";
+      div.style.top = territory.y + "px";
+      div.style.width = territory.width + "px";
+      div.style.height = territory.height + "px";
+      div.setAttribute("title", territory.name);
 
-    img.onload = function() {
-      canvas.width = img.width;
-      canvas.height = img.height;
-      ctx.drawImage(img, 0, 0);
-    }
+      div.onclick = () => alert(`Território: ${territory.name}`);
 
-    canvas.addEventListener("click", function(event) {
-      const rect = canvas.getBoundingClientRect();
-      const x = event.clientX - rect.left;
-      const y = event.clientY - rect.top;
-
-      const territory = territories.find(t => x >= t.x && x <= t.x + t.width && y >= t.y && y <= t.y + t.height);
-      
-      if (territory) {
-        document.getElementById("territory-name").textContent = "Território: " + territory.name;
-      } else {
-        document.getElementById("territory-name").textContent = "Território não identificado";
-      }
+      document.body.appendChild(div);
     });
-
-    function selectElement(id) {
-      const element = document.getElementById(id);
-      element.scrollIntoView({ behavior: "smooth", block: "center", inline: "center" });
-    }
   </script>
 </body>
 </html>
