--- a/Partida/partida-joao.html
+++ b/Partida/partida-joao.html
@@ -33,7 +33,7 @@
   </style>
 </head>
 <body>
-  <div id="mapa" class="image-container">
+  <div id="mapa" class="image">
     <img src="/IMAGE/Mundi.svg" alt="mapa">
   </div>
   <script>
