--- a/Partida/partida-joao.html
+++ b/Partida/partida-joao.html
@@ -33,23 +33,53 @@
   </style>
 </head>
 <body>
-  <div id="mapa" class="image">
+  <div id="mapa" class="image-container">
     <img src="/IMAGE/Mundi.svg" alt="mapa">
   </div>
   <script>
     const territories = [
-      { id: "alaska", name: "Alasca", x: 50, y: 60, width: 30, height: 20 },
-      { id: "canada", name: "Canadá", x: 90, y: 60, width: 70, height: 50 },
-      { id: "usa", name: "Estados Unidos", x: 180, y: 100, width: 70, height: 50 },
-      { id: "mexico", name: "México", x: 240, y: 160, width: 40, height: 30 },
-      { id: "brazil", name: "Brasil", x: 320, y: 300, width: 70, height: 100 },
-      { id: "argentina", name: "Argentina", x: 360, y: 450, width: 50, height: 80 },
-      { id: "uk", name: "Reino Unido", x: 520, y: 80, width: 30, height: 20 },
-      { id: "france", name: "França", x: 540, y: 100, width: 40, height: 30 },
-      { id: "germany", name: "Alemanha", x: 580, y: 100, width: 40, height: 30 },
-      { id: "china", name: "China", x: 700, y: 200, width: 70, height: 50 },
-      { id: "japan", name: "Japão", x: 780, y: 210, width: 30, height: 30 },
-      { id: "australia", name: "Austrália", x: 820, y: 500, width: 70, height: 50 }
+      { id: "territory-1", name: "1", x: 50, y: 60, width: 30, height: 20 },
+      { id: "territory-2", name: "2", x: 90, y: 60, width: 70, height: 50 },
+      { id: "territory-3", name: "3", x: 180, y: 100, width: 70, height: 50 },
+      { id: "territory-4", name: "4", x: 240, y: 160, width: 40, height: 30 },
+      { id: "territory-5", name: "5", x: 320, y: 300, width: 70, height: 100 },
+      { id: "territory-6", name: "6", x: 360, y: 450, width: 50, height: 80 },
+      { id: "territory-7", name: "7", x: 520, y: 80, width: 30, height: 20 },
+      { id: "territory-8", name: "8", x: 540, y: 100, width: 40, height: 30 },
+      { id: "territory-9", name: "9", x: 580, y: 100, width: 40, height: 30 },
+      { id: "territory-10", name: "10", x: 700, y: 200, width: 70, height: 50 },
+      { id: "territory-11", name: "11", x: 780, y: 210, width: 30, height: 30 },
+      { id: "territory-12", name: "12", x: 820, y: 500, width: 70, height: 50 },
+      { id: "territory-13", name: "13", x: 400, y: 100, width: 40, height: 30 },
+      { id: "territory-14", name: "14", x: 100, y: 200, width: 50, height: 40 },
+      { id: "territory-15", name: "15", x: 150, y: 250, width: 60, height: 40 },
+      { id: "territory-16", name: "16", x: 200, y: 300, width: 70, height: 50 },
+      { id: "territory-17", name: "17", x: 250, y: 350, width: 80, height: 60 },
+      { id: "territory-18", name: "18", x: 300, y: 400, width: 90, height: 70 },
+      { id: "territory-19", name: "19", x: 350, y: 450, width: 100, height: 80 },
+      { id: "territory-20", name: "20", x: 400, y: 500, width: 110, height: 90 },
+      { id: "territory-21", name: "21", x: 450, y: 550, width: 120, height: 100 },
+      { id: "territory-22", name: "22", x: 500, y: 600, width: 130, height: 110 },
+      { id: "territory-23", name: "23", x: 550, y: 650, width: 140, height: 120 },
+      { id: "territory-24", name: "24", x: 600, y: 700, width: 150, height: 130 },
+      { id: "territory-25", name: "25", x: 650, y: 750, width: 160, height: 140 },
+      { id: "territory-26", name: "26", x: 700, y: 800, width: 170, height: 150 },
+      { id: "territory-27", name: "27", x: 750, y: 850, width: 180, height: 160 },
+      { id: "territory-28", name: "28", x: 800, y: 900, width: 190, height: 170 },
+      { id: "territory-29", name: "29", x: 850, y: 950, width: 200, height: 180 },
+      { id: "territory-30", name: "30", x: 900, y: 1000, width: 210, height: 190 },
+      { id: "territory-31", name: "31", x: 950, y: 1050, width: 220, height: 200 },
+      { id: "territory-32", name: "32", x: 1000, y: 1100, width: 230, height: 210 },
+      { id: "territory-33", name: "33", x: 1050, y: 1150, width: 240, height: 220 },
+      { id: "territory-34", name: "34", x: 1100, y: 1200, width: 250, height: 230 },
+      { id: "territory-35", name: "35", x: 1150, y: 1250, width: 260, height: 240 },
+      { id: "territory-36", name: "36", x: 1200, y: 1300, width: 270, height: 250 },
+      { id: "territory-37", name: "37", x: 1250, y: 1350, width: 280, height: 260 },
+      { id: "territory-38", name: "38", x: 1300, y: 1400, width: 290, height: 270 },
+      { id: "territory-39", name: "39", x: 1350, y: 1450, width: 300, height: 280 },
+      { id: "territory-40", name: "40", x: 1400, y: 1500, width: 310, height: 290 },
+      { id: "territory-41", name: "41", x: 1450, y: 1550, width: 320, height: 300 },
+      { id: "territory-42", name: "42", x: 1500, y: 1600, width: 330, height: 310 }
     ];
 
     territories.forEach(territory => {
